--- a/IPCanary/SettingsView.xib
+++ b/IPCanary/SettingsView.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingsViewController" customModule="IPCanary" customModuleProvider="target">
             <connections>
+                <outlet property="queryHostTextField" destination="wWe-ez-7cM" id="ytg-aC-x3N"/>
                 <outlet property="view" destination="iN0-l3-epB" id="yfP-sv-9Fn"/>
             </connections>
         </placeholder>
@@ -19,15 +20,34 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YMW-cO-qki">
-                    <rect key="frame" x="181" y="195" width="42" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="https://ifconfig.co" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wWe-ez-7cM">
+                    <rect key="frame" x="63" y="129" width="250" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="250" id="HdC-OE-jeu"/>
+                    </constraints>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Query Server" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHq-MJ-G5e">
+                    <rect key="frame" x="130" y="100" width="114" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="114" id="XWY-cI-lpb"/>
+                        <constraint firstAttribute="height" constant="21" id="lbf-JZ-uv1"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="18"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="wWe-ez-7cM" firstAttribute="top" secondItem="bHq-MJ-G5e" secondAttribute="bottom" constant="8" id="2Vm-WF-ncu"/>
+                <constraint firstItem="wWe-ez-7cM" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="9bZ-Rd-7V8"/>
+                <constraint firstItem="bHq-MJ-G5e" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Tzu-27-E3N"/>
+                <constraint firstItem="bHq-MJ-G5e" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="100" id="lQz-vw-DzS"/>
+            </constraints>
+            <point key="canvasLocation" x="34.5" y="69.5"/>
         </view>
     </objects>
 </document>
